--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -3,7 +3,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src: local('Open Sans'), local('OpenSans'), url('="/assets/themes/twitter/images/OpenSans.woff') format('woff');
+  src: local('Open Sans'), local('OpenSans'), url('/assets/themes/twitter/images/OpenSans.woff') format('woff');
 }
 body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, form, input, textarea, button, fieldset, legend, figure { margin: 0; padding: 0; }
 body { font:14px/1.5 Corbel, "Helvetica Neue", Helvetica, Arial; color: #3E3E3E; }
@@ -77,15 +77,15 @@ pre,code { font:13px/1.4 Monaco, Menlo, Consolas, "Courier New", monospace; }
 .page_bd blockquote { padding:8px; margin:1.4em 0 3px 0; border-left:solid 4px #FF0000; background:#FFFFCC; font-size:86%; }
 .page_bd blockquote:before { width:70px; margin:-1.5em 0 0.5em; padding:0 1em; display:block; content:"note"; border:solid 1px #FF0000; background:#FFF; font-weight:bold; color:#FF0000; }
 .page_bd blockquote p { text-indent:0; }
-.page_bd pre{ width:80%;margin:10px 0; overflow:auto; padding:0.8em 1em; background:#F8F8F8; border:solid 1px #bbb; line-height:1.4; color:#333 }
+.page_bd pre{ margin:10px 0; overflow:auto; padding:0.8em 1em; background:#F8F8F8; border:solid 1px #bbb; line-height:1.4; color:#333 }
 .page_bd p code { padding: 2px 4px; font-size: 90%; color: #c7254e; white-space: nowrap; background-color: #f9f2f4; border-radius: 4px; }
 /*===*/
 .article-item { padding:2px 0; }
-.article-item h2.article-item-tit { margin:0; font-size:14px; display:inline-block; font-weight:normal; }
+.article-item h2.article-item-tit { display:inline-block; margin:0; font-family:'Open Sans',"Helvetica Neue", Helvetica, Arial;  font-weight:normal; }
 .article-item h2.article-item-tit a { text-decoration:underline;  }
 .article-summary { padding-left:40px; }
 /*===*/
-.footer { padding:10px 0 30px; border-top:solid 1px #eee; }
+.footer { padding:10px 0 30px; border-top:solid 1px #eee; font-size:12px; }
 /*代码高亮*/
 .pln { color: #000 }
 @media screen {
