--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -32,29 +32,29 @@
 <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 </head>
 <body>
-<div class="navbar">
-    <div class="container-narrow">
+<div class="wrqp">
+    <div class="navbar">
         <ul class="nav">
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
         </ul>
     </div>
-</div>
-<div class="wrap">
-    <aside class="sidebar">
-        <a class="brand" href="{{ HOME_PATH }}"><img src="/assets/themes/twitter/images/brand.png" alt="Go home" title="Go home" width="250" height="40"></a>
-        <div class="me"><img src="/assets/themes/twitter/images/me.jpg" width="150" height="150"></div>
-        <div class="earth"><img src="/assets/themes/twitter/images/earth.png" alt="" width="430" height="147"></div>
-    </aside>
-    <div class="container auto">
-        <div class="main">
-            <div class="content"> {{ content }} </div>
+    <div class="container">
+        <aside class="sidebar">
+            <a class="brand" href="{{ HOME_PATH }}"><img src="/assets/themes/twitter/images/brand.png" alt="Go home" title="Go home" width="250" height="40"></a>
+            <div class="me"><img src="/assets/themes/twitter/images/me.jpg" width="150" height="150"></div>
+            <div class="earth"><img src="/assets/themes/twitter/images/earth.png" alt="" width="430" height="147"></div>
+        </aside>
+        <div class="side">
+            <div class="main">
+                <div class="content"> {{ content }} </div>
+            </div>
+            <footer class="footer">
+                <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
+                    with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a> and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a> </p>
+            </footer>
         </div>
-        <footer class="footer">
-            <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-                with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a> and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a> </p>
-        </footer>
     </div>
 </div>
 <div style="display:none;"><script src="http://s13.cnzz.com/stat.php?id=5793657&web_id=5793657" language="JavaScript"></script></div>
