--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -32,7 +32,7 @@
 <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 </head>
 <body>
-<div class="wrqp">
+<div class="wrap">
     <div class="navbar">
         <ul class="nav">
             {% assign pages_list = site.pages %}
