--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -39,7 +39,7 @@
             <li><a href="/categories.html">Categories</a></li>
             <li><a href="/pages.html">Pages</a></li>
             <li><a href="/tags.html">Tags</a></li>
-            <li><a href="/about.html">Aabout</a></li>
+            <li><a href="/about.html">About</a></li>
         </ul>
     </div>
     <div class="container">
