--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -32,6 +32,7 @@
 <div class="wrap">
     <div class="navbar">
         <ul class="nav">
+            <li><a href="/">Home</a></li>
             <li><a href="/archive.html">Archive</a></li>
             <li><a href="/categories.html">Categories</a></li>
             <li><a href="/pages.html">Pages</a></li>
